visual bug on Safari/Firefox

--- a/application/src/main/webapp/css/chat.css
+++ b/application/src/main/webapp/css/chat.css
@@ -274,5 +274,6 @@ hr
   background:url('../img/smileys/surprise.png') no-repeat 0px 0px;
 }
 .smileyText, .invisibleText {
-  font-size: 0px;
+  font-size: 1px;
+  color: white;
 }
